加入上麦sdk并且测试成功

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /build
 /captures
 .externalNativeBuild
+oneKeyShare/build/intermediates/bundles/debug
+oneKeyShare/build
+*.class
+shareSDKmainLibs/build
