--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,11 @@
             android:name="com.fubang.lihaovv.ui.LoginActivity_"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
+        <activity
+
+            android:name="com.fubang.lihaovv.ui.PushrtmpTestActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
 
         <!--<service-->
         <!--android:name=".services.RoomService"-->
