--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,13 @@ android {
         checkReleaseBuilds false
         abortOnError false
     }
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'armeabi-v7a'
+        }
+    }
 }
 
 
@@ -106,9 +113,12 @@ dependencies {
     compile 'com.lovedise:permissiongen:0.0.6'
     compile 'com.qiniu.pili:pili-android-qos:0.8.+'
     compile files('libs/pldroid-media-streaming-2.1.2.jar')
-    compile files('libs/pldroid-player-1.5.0.jar')
+
     compile files('libs/klog.jar')
     compile 'com.lzy.net:okgo:3.0.0'
+    compile files('libs/pldroid-player-1.5.1.jar')
+    compile files('libs/alivc-live-record.jar')
+    compile files('libs/pldroid-media-streaming-2.1.3.jar')
 }
 apt {
     arguments {
