--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,6 +119,8 @@ dependencies {
     compile files('libs/pldroid-player-1.5.1.jar')
     compile files('libs/alivc-live-record.jar')
     compile files('libs/pldroid-media-streaming-2.1.3.jar')
+    //封装的popwindow
+    compile 'com.github.pinguo-zhouwei:CustomPopwindow:2.0.0'
 }
 apt {
     arguments {
