--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,13 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://jitpack.io'
+
+        }
+
     }
+
 }
 
 task clean(type: Delete) {
